<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/headerColor"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:text="회원 가입"
            android:textSize="31sp" />

    </FrameLayout>


    <EditText
        android:id="@+id/et_id"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/validateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/et_id"
        app:layout_constraintTop_toTopOf="@+id/et_id" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_id"
        app:layout_constraintTop_toBottomOf="@+id/et_id" />

    <EditText
        android:id="@+id/et_passck"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_passck"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_pass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_pass"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_passck"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_passck"
        app:layout_constraintTop_toBottomOf="@+id/et_passck" />

    <EditText
        android:id="@+id/et_company"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_company"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_hak"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_hak"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_company"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_company"
        app:layout_constraintTop_toBottomOf="@+id/et_company" />

    <EditText
        android:id="@+id/et_maj"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/et_maj"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_hak"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_hak"
        app:layout_constraintTop_toBottomOf="@+id/et_hak" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/et_maj"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_maj"
        app:layout_constraintTop_toBottomOf="@+id/et_maj" />


</androidx.constraintlayout.widget.ConstraintLayout>